syntax = "proto3";
package utils;

option go_package = "github.com/SashwatAnagolum/picodb/utils";

import "google/protobuf/timestamp.proto";

message PicoDBRequest {
    string Key = 1;
    string Value = 2;
    google.protobuf.Timestamp Time = 3;
    int32 RequestType = 4;
}

message PicoDBResponse {
    string Key = 1;
    string Value = 2;
}

message PicoDBServerMessage {
    int32 MessageType = 1;
    string Key = 2;
    string Value = 3;
    string sourceIPAddress = 4;
}